[tool.poetry]
name = "exchange"
version = "0.1.0"
description = "A dummy asset exchange used in my talks as a livecoding/livedemo basis"
authors = ["Johnny Rocketfingers <developer94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-vcr = "^1.0.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
